// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSocial component snapshot should render snapshot without icon render function 1`] = `
<DocumentFragment>
  <button
    class="buttonSocial"
    data-testid="buttonSocialComponent"
    type="button"
  >
    <span
      class="buttonSocialText"
      data-testid="buttonSocialComponentText"
    >
      Facebook
    </span>
    <i
      class="buttonSocialIcon"
    />
  </button>
</DocumentFragment>
`;

exports[`ButtonSocial component snapshot should render succesfully with status prefix with connect status 1`] = `
<DocumentFragment>
  <button
    class="buttonSocial"
    data-testid="buttonSocialComponent"
    type="button"
  >
    <span
      class="buttonSocialText"
      data-testid="buttonSocialComponentText"
    >
      Connect Facebook
    </span>
    <i
      class="buttonSocialIcon"
    >
      <span>
        MockedIcon
      </span>
    </i>
  </button>
</DocumentFragment>
`;

exports[`ButtonSocial component snapshot should render succesfully without status prefix without connect status 1`] = `
<DocumentFragment>
  <button
    class="buttonSocial"
    data-testid="buttonSocialComponent"
    type="button"
  >
    <span
      class="buttonSocialText"
      data-testid="buttonSocialComponentText"
    >
      Facebook
    </span>
    <i
      class="buttonSocialIcon"
    >
      <span>
        MockedIcon
      </span>
    </i>
  </button>
</DocumentFragment>
`;
